# playground

./: .gitignore  secret_list.rb
arrays/: .gitignore
atoi/: atoi.c
bank_cpp/: bank  main.cpp
bitwise_data/: .gitignore  bitwise_data.c  bitwiseop.c  opposite_signs.cpp  play.cpp
comm/socket/: .gitignore  CMakeLists.txt  tcp_client.c  tcp_server.c
comm/socket/inc/: tcp_socket_conn.h
comm/socket/src/: tcp_client.c  tcp_server.c  tcp_socket_conn.c
data_trasfer/: data_transfer.c
docs/: arm.md  bashrc.txt  c.md  c.txt  comm.md  cpp.md  cpp.txt  docker.md  embedded.md  feedback.md  git.txt  hacker.md  intellij.md  javascript.md  lead.txt  linux.md  linux.txt  mosquitto.md  python.md  python.txt  questions.txt  questions_cpp.txt  stm32.md  stock.md  vscode.md
docs/sample_files/emacs/: emacs_profile
docs/sample_files/ubuntu/: pycharm.desktop
docs/ubuntu_files/: clion.desktop
du/: du.cpp
dup_tree/: dup.cpp
find_string/: .gitignore  Makefile  find_consecutive.c  find_consecutive.cpp  find_consecutive.py  remove_consecutive_repeats.cpp  remove_consecutive_repeats.py
guessgame/: guessgame00.py
hello_world/: .gitignore  collection.py  constexpr.c  hello.c  hello.cpp  hello.js  hello.py  hello2  silly.cpp  simstr.cpp  sizes.c  sizes.cpp
hellolion/: CMakeLists.txt  hellolion.cpp  hellolion.h
lists/: .gitignore  insert_element00.c  insert_element01.c
lists/sort_array/: sort_array.c  sort_array.py
multip_vector/: mult.cpp
pattern_00/: .gitignore  pattern.c  pattern.cpp  pattern.py  pattern.rb
prime/: Makefile  prime.cpp  prime.py
prop/: prop.cpp
(+4 files in other folders)
